--- a/app/views/index.html
+++ b/app/views/index.html
@@ -508,7 +508,7 @@
           <a href="manage/notify/">Enforcement</a>
         </li>
         <li>
-          <a href="manage/questionnaire/">Enforcement listed building</a>
+          <a href="#">Enforcement listed building</a>
         </li>
         <li>
           <a href="manage/questionnaire-enf/">Enforcement questionnaire</a>
