--- a/app/views/index.html
+++ b/app/views/index.html
@@ -98,6 +98,9 @@
           <a href="/appeal/enforcement">Enforcement</a>
         </li>
         <li>
+          <a href="/appeal/enforcement/v1-statement/start">Enforcement: appellant statement</a>
+        </li>
+        <li>
           <a href="/appeal/enforcement-2022/v8/before-you-continue">Enforcement v8 from 2022</a>
         </li>
         <li>
@@ -505,15 +508,11 @@
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="manage/notify/">Enforcement</a>
-        </li>
-        <li>
-          <a href="#">Enforcement listed building</a>
-        </li>
-        <li>
           <a href="manage/questionnaire-enf/">Enforcement questionnaire</a>
         </li>
-        
+        <li>
+          Enforcement listed building
+        </li>
       </ul>
     {% endset -%}
 
