Fixing the link to the reasons for appeal

--- a/app/views/appeal/s78e/v2/task-list__prepare.html
+++ b/app/views/appeal/s78e/v2/task-list__prepare.html
@@ -652,7 +652,7 @@ Sustainability Statement – describing energy efficiency, renewable energy use,
       },
       {
         key: {
-          html: 'Grounds of appeal'
+          html: 'Why are you appealing?'
         },
         value: {
           html: data['grounds'] or dummygrounds | nl2br
