Fixes to link up expedited routes

--- a/app/views/appeal/s78e/v2/check-your-answers.html
+++ b/app/views/appeal/s78e/v2/check-your-answers.html
@@ -302,10 +302,10 @@
           },
           {
             key: {
-              text: "Grounds of appeal"
+              text: "Why are you appealing?"
             },
             value: {
-              html: data['grounds'] or dummygrounds | nl2br
+              html: data['reasons-for-appeal'] or dummygrounds | nl2br
             },
             actions: {
               items: [
