--- a/app/views/appeal/s78e/v2/task-list.html
+++ b/app/views/appeal/s78e/v2/task-list.html
@@ -17,8 +17,8 @@
       text: 'Skip to confirmation'
     },
     {
-      href: '/manage/appeals/v10/',
-      text: 'Jump to the LPA dashboard'
+      href: 'https://pins-app-prototype-appeals-back-office.azurewebsites.net/projects/written-representations-part-1/v1/case-details?case-stage=validation',
+      text: 'Manage appeals, appeal is submitted and can be validated'
     }
   ]
 %}
