Content change to application form upload

--- a/app/views/appeal/s78e/v2/upload-documents/application-form.html
+++ b/app/views/appeal/s78e/v2/upload-documents/application-form.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Upload your planning application form' %}
+{% set title = 'Upload your application form' %}
 
 {% set pageName = title + ' - Planning Inspectorate'%} {% block questions %}
   <h1 class="govuk-heading-l">
