--- a/app/views/manage/questionnaire-enf/v1/site-access/site-entry.html
+++ b/app/views/manage/questionnaire-enf/v1/site-access/site-entry.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Will the inspector need to enter a neighbour’s land or property?' %}
+{% set title = 'Will the inspector need access to the appellant’s land or property?' %}
 
 {% block questions %}
 
